// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDeliveryOptions function should build proper nodes with days as empty string 1`] = `
"<?xml version=\\"1.0\\"?>
<root>
  <delivery-options>
    <option cost=\\"300\\" days=\\"\\" order-before=\\"12\\"/>
  </delivery-options>
</root>"
`;

exports[`createDeliveryOptions function should build proper nodes with days as number 1`] = `
"<?xml version=\\"1.0\\"?>
<root>
  <delivery-options>
    <option cost=\\"300\\" days=\\"1\\" order-before=\\"12\\"/>
  </delivery-options>
</root>"
`;

exports[`createDeliveryOptions function should build proper nodes with days as tuple 1`] = `
"<?xml version=\\"1.0\\"?>
<root>
  <delivery-options>
    <option cost=\\"300\\" days=\\"1-20\\" order-before=\\"12\\"/>
  </delivery-options>
</root>"
`;

exports[`createOfferPrice function should build proper nodes from number 1`] = `
"<?xml version=\\"1.0\\"?>
<root>
  <price>1490</price>
</root>"
`;

exports[`createOfferPrice function should build proper nodes from object 1`] = `
"<?xml version=\\"1.0\\"?>
<root>
  <price from=\\"true\\">1490</price>
</root>"
`;

exports[`createYML function should create YML 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<yml_catalog date=\\"2017-09-07 00:00\\">
  <shop>
    <name>BestSeller</name>
    <company>Tne Best inc.</company>
    <url>http://best.seller.ru</url>
    <currencies>
      <currency id=\\"RUR\\" rate=\\"1\\"/>
      <currency id=\\"USD\\" rate=\\"60\\"/>
    </currencies>
    <categories>
      <category id=\\"1\\">Бытовая техника</category>
      <category id=\\"10\\" parentId=\\"1\\">Мелкая техника для кухни</category>
      <category id=\\"101\\" parentId=\\"10\\">Сэндвичницы и приборы для выпечки</category>
      <category id=\\"102\\" parentId=\\"10\\">Мороженицы</category>
    </categories>
    <delivery-options>
      <option cost=\\"300\\" days=\\"1-20\\" order-before=\\"12\\"/>
    </delivery-options>
    <offers>
      <offer id=\\"12346\\" available=\\"true\\" bid=\\"80\\" cbid=\\"90\\" fee=\\"325\\">
        <url>http://best.seller.ru/product_page.asp?pid=12348</url>
        <price>1490</price>
        <oldprice>1620</oldprice>
        <currencyId>RUR</currencyId>
        <categoryId>101</categoryId>
        <picture>http://best.seller.ru/img/large_12348.jpg</picture>
        <store>false</store>
        <pickup>true</pickup>
        <outlets>
          <outlet id=\\"1\\" instock=\\"50\\"/>
          <outlet id=\\"2\\" instock=\\"20\\" booking=\\"true\\"/>
        </outlets>
        <delivery>true</delivery>
        <delivery-options>
          <option cost=\\"300\\" days=\\"0\\" order-before=\\"12\\"/>
        </delivery-options>
        <name>Вафельница First FA-5300</name>
        <vendor>First</vendor>
        <vendorCode>A1234567B</vendorCode>
        <description>
          <![CDATA[
        <p>Отличный подарок для любителей венских вафель.</p>
      ]]>
        </description>
        <sales_notes>Необходима предоплата.</sales_notes>
        <manufacturer_warranty>true</manufacturer_warranty>
        <country_of_origin>Россия</country_of_origin>
        <age unit=\\"month\\">12</age>
        <barcode>0156789012</barcode>
        <param name=\\"Размер экрана\\" unit=\\"дюйм\\">27</param>
        <param name=\\"Материал\\">алюминий</param>
        <dimensions>20/30/40</dimensions>
        <cpa>1</cpa>
        <rec>123,456</rec>
      </offer>
    </offers>
  </shop>
</yml_catalog>"
`;

exports[`createYML function should escape " & > < ' 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<yml_catalog date=\\"2017-09-07 00:00\\">
  <shop>
    <name>\\" &amp; &gt; &lt; '</name>
    <offers>
      <offer>
        <description>
          <![CDATA[<p>\\" & > < '</p>]]>
        </description>
      </offer>
    </offers>
  </shop>
</yml_catalog>"
`;
